Adicionado pag de login

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
+
     />
   </head>
 
@@ -37,9 +38,7 @@
               >Videos <span class="sr-only">(Página atual)</span></a
             >
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Musicas</a>
-          </li>
+
           <li class="nav-item">
             <a class="nav-link" href="#">Assistidos</a>
           </li>
@@ -50,6 +49,9 @@
             type="search"
             placeholder="Pesquisar"
           />
+
+          <a href="login.html"  class="btn btn-danger my-2 my-sm-0" type="submit" ><button>Login</button></a>
+
           <button class="btn btn-danger my-2 my-sm-0" type="submit">
             Pesquisar
           </button>
